<resources>
    <string name="app_name">Aptitude and Logical Reasoning</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">Re Enter Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_user_register">New User !! Register</string>
    <string name="select_dob">Select Date of Birth</string>
    <string name="register">Register</string>
    <string name="happy_to_welcome_you">Happy to Welcome You !!</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="getting_you_back">Getting you back.......</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_text">Share Credits Left : </string>



    <string name="privacy_policy_link">https://aptitudeandlogical.wordpress.com/privacy-policy/</string>

    <string name="sha_key">304263100288-pvarumqvmc8kff5u04ib3ahksnsh5917.apps.googleusercontent.com</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.developingmind.aptitudeandlogicalreasoning</string>

    <string name="bannerAd_ID">ca-app-pub-5038792352708017/2883510176</string>
    <string name="interstitialAd_ID">ca-app-pub-5038792352708017/2951754946</string>
    <string name="videoAd_ID">ca-app-pub-5038792352708017/9255132392</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="questions_grid">Questions Grid</string>
</resources>