<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/background2"
    tools:context=".login.SignUpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginVertical="@dimen/login_margin_vertical"
        android:text="@string/happy_to_welcome_you" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/login_margin_vertical"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fname_layout_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/login_margin_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fname_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lname_layout_signup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="@dimen/login_margin_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lname_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_email"
        app:endIconDrawable="@drawable/ic_check_mark"
        app:errorIconDrawable="@drawable/ic_check_mark_error"
        app:endIconMode="custom"
        app:errorEnabled="true"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_layout_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_date"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_signup"
            android:layout_width="match_parent"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:hint="@string/select_dob" />

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="5dp"
        android:background="@drawable/radio_group_bg"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Male" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Female" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/password_layout_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_password"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/login_margin_vertical"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_signup"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/repassword_layout_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_password"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/login_margin_vertical"
        android:layout_marginHorizontal="@dimen/login_margin_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repassword_signup"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_margin_vertical"
        android:text="@string/register" />

</androidx.appcompat.widget.LinearLayoutCompat>