<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_gravity="start"
       android:gravity="center"
       android:orientation="vertical">

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="30sp"
           android:layout_marginVertical="@dimen/login_margin_vertical"
           android:text="Profile" />

       <com.google.android.material.imageview.ShapeableImageView
           android:id="@+id/profile_icon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/male_avatar"
           />

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="16dp"
           android:orientation="horizontal">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/fname_layout_profile"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginHorizontal="@dimen/login_margin_horizontal">

               <com.google.android.material.textfield.TextInputEditText

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/first_name" />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/lname_layout_profile"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginHorizontal="@dimen/login_margin_horizontal">

               <com.google.android.material.textfield.TextInputEditText

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/last_name" />

           </com.google.android.material.textfield.TextInputLayout>

       </androidx.appcompat.widget.LinearLayoutCompat>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/email_layout_profile"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:enabled="false"
           android:layout_marginHorizontal="@dimen/login_margin_horizontal">

           <com.google.android.material.textfield.TextInputEditText

               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_email" />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/date_layout_profile"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:enabled="false"
           app:startIconDrawable="@drawable/ic_date"
           android:layout_marginTop="16dp"
           android:layout_marginHorizontal="@dimen/login_margin_horizontal">

           <com.google.android.material.textfield.TextInputEditText

               android:layout_width="match_parent"
               android:enabled="false"
               android:layout_height="wrap_content"
               android:hint="@string/select_dob" />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/gender_profile"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:startIconDrawable="@drawable/ic_gender"
           android:enabled="false"
           android:layout_marginTop="16dp"
           android:layout_marginHorizontal="@dimen/login_margin_horizontal">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:enabled="false"
               android:layout_height="wrap_content"
               android:hint="Gender" />

       </com.google.android.material.textfield.TextInputLayout>


       <Button
           android:id="@+id/profile_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/login_margin_vertical"
           android:text="Update" />

   </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>