<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".quiz.QuestionsActivity">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00008577"
                app:title="Question"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/category_bg"
                android:fontFamily="serif"
                android:padding="20dp"
                android:scrollbars="vertical"
                android:maxLines="8"
                android:text="Question"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/question_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="5dp"
                android:text="5/10"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <LinearLayout
                android:id="@+id/options_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bookmark_btn">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/options"
                    android:fontFamily="serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Option A"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/options"
                    android:fontFamily="serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Option B"
                    android:textAllCaps="false"
                    android:textColor="@color/black"  />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/options"
                    android:fontFamily="serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Option C"
                    android:textAllCaps="false"
                    android:textColor="@color/black"  />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/options"
                    android:fontFamily="serif"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="Option D"
                    android:textAllCaps="false"
                    android:textColor="@color/black"  />
            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView5">

            <Button
                android:id="@+id/previous_btn"
                android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/button"
                android:contentDescription="Previous"
                android:text="Previous" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/questions_grid"
                android:src="@drawable/ic_grid"
                app:backgroundTint="@color/white" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="Next"
                android:background="@drawable/button"
                android:text="Skip" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_share"
        android:contentDescription="@string/share"
        android:translationY="24dp"
        android:layout_marginStart="15dp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
        app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/bookmark_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/bookmark"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="15dp"
            android:src="@drawable/bookmark_border"
            app:backgroundTint="@color/white"
            android:translationY="24dp" />




</androidx.constraintlayout.widget.ConstraintLayout>